apps/dex/dex-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dex
  namespace: dex
spec:
  ports:
    - port: 80
      targetPort: 5556
  selector:
    app: dex
